--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
 /* Your CSS Code here. */
+table, th, td{
+    border-collapse: collapse;
+    padding: 10px 5px;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 5px;
+}
+table{
+    width: 100%;
+}
+th{
+    background-color: rgb(0, 110, 255);
+    color: white;
+}
+tr:nth-child(even){
+    background-color: gainsboro;
+}
